config/dev/local-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio: ingressgateway
    gateway.io/name: mcp-gateway
  name: mcp-gateway
  namespace: gateway-system
spec:
  gatewayClassName: istio
  listeners:
    - name: mcp
      hostname: 'mcp.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcps
      port: 8080
      protocol: HTTP
      hostname: '*.mcp.local'
      allowedRoutes:
        namespaces:
          from: All
    - name: mcp-server1-route-ext
      hostname: 'server1.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcp-server2-route-ext
      hostname: 'server2.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcp-server3-route-ext
      hostname: 'server3.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcp-api-key-server-route-ext
      hostname: 'api-key-server.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcp-oidc-server-route-ext
      hostname: 'oidc-server.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcp-everything-server-route-ext
      hostname: 'everything-server.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-mcp-gateway-extension
  namespace: gateway-system
spec:
  from:
    - group: mcp.kuadrant.io
      kind: MCPGatewayExtension
      namespace: mcp-system
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: mcp-gateway
    istio.io/dataplane-mode: none
  name: mcp-gateway-np
  namespace: gateway-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - appProtocol: http
    name: mcp
    nodePort: 30080
    port: 8080
    protocol: TCP
    targetPort: 8080
  - appProtocol: http
    name: keycloak
    nodePort: 30089
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    gateway.networking.k8s.io/gateway-name: mcp-gateway
  sessionAffinity: None
  type: NodePort
